<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenDefi</string>
    <string name="address_copied">Address Copied</string>
    <string name="approve">Approve</string>
    <string name="swap">Swap</string>
    <string name="add_to_watch">Add to watch</string>
    <string name="remove_from_watch">Remove from watch</string>
    <string name="refresh_transaction">Refresh Transaction</string>
    <string name="refresh_transaction_dex">The App is Refreshing Dex Transaction for you</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="dialog_loading">Loading</string>
    <string name="login">Login</string>
    <string name="input_private">Input private key</string>
    <string name="import_private">Import</string>
    <string name="create">Create</string>
    <string name="import_error">Private key format error.</string>
    <string name="create_error">Create private key failed. Please try again.</string>
    <string name="more_title">More Actions</string>
    <string name="exit_login">Exit login</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="receipt_address">Address receipt</string>
    <string name="fee">Fee</string>
    <string name="confirm_pay">Confirm pay</string>
    <string name="confirm_approval">Confirm approval</string>
    <string name="search_pair">Search Pair</string>
    <string name="sel_swap">Select Swap</string>
    <string name="token0">token0</string>
    <string name="token1">token1</string>
    <string name="quick_swap">QuickSwap</string>
    <string name="fee_swap">FeeSwap</string>
    <string name="check_sell">CheckSell</string>
</resources>