<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <View
        android:id="@+id/dialog_dismiss"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/dialog_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/base_dialog_bottom_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:id="@+id/dialog_back_layout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/base_back_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@mipmap/base_btn_back" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/transaction_detail"
                android:textColor="@color/title"
                android:textSize="@dimen/title" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/show_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/title"
                android:textSize="@dimen/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/base_bottom_line"
                android:layout_marginLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/receipt_address"
                    android:textColor="@color/des"
                    android:textSize="@dimen/des" />

                <TextView
                    android:id="@+id/receipt_address"
                    android:textColor="@color/title"
                    android:textSize="@dimen/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/base_bottom_line"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fee"
                    android:textColor="@color/des"
                    android:textSize="@dimen/des" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/gas"
                        android:textColor="@color/title"
                        android:textSize="@dimen/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/gas_detail"
                        android:textColor="@color/des"
                        android:textSize="@dimen/des"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="bottom"
                android:paddingBottom="20dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cancel"
                    android:textColor="@color/base_button_title"
                    android:textSize="@dimen/title"
                    android:background="@drawable/base_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cancel_button"
                    android:layout_marginRight="15dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:id="@+id/confirm_pay"
                    android:textColor="@color/base_button_title"
                    android:textSize="@dimen/title"
                    android:background="@drawable/base_warning_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:text="@string/confirm_pay"
                    android:layout_height="40dp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
